--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "jquery": "^3.7.1",
+    "v-mask": "^2.3.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
