--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "jquery": "^3.7.1",
     "v-mask": "^2.3.0",
     "vue": "^3.3.4",
