--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
+    "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.5"
   }
