--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "jquery": "^3.7.1",
+    "moment": "^2.29.4",
     "v-mask": "^2.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
